--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,13 +16,13 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '23.1.0' # Bruk riktig Node-versjon for prosjektet
+          node-version: '18' # Bruk riktig Node-versjon for prosjektet
 
       - name: Install dependencies
-        run: npm install
+        run: npm run build
 
       - name: Build the project
-        run: npm run build
+        run: vite build
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
