--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,20 +13,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Remove node_modules and package-lock.json
-        run: |
-          rm -rf node_modules
-          rm -f package-lock.json
-
-      - name: Setup Node.js
+      - name: Set up Node.js environment
         uses: actions/setup-node@v2
         with:
           node-version: '16'  # Angir Node-versjon 16 som er kompatibel med Vite
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci  # Bruker npm ci for å installere basert på package-lock.json for konsistens
 
       - name: Build the project
+        env:
+          VITE_BASE_URL: '/bookingapp/'  # Spesifiser base-URL direkte under bygging
         run: npm run build  # Bygg prosjektet
 
       - name: Deploy to GitHub Pages
@@ -34,3 +31,5 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist  # Mappen som bygges, skal publiseres
+
+
